--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="center">
             <div class="content">
-                <video src="/project7/DIOR Fashion Film 2020 _ Directed by VIVIENNE & TAMAS.mp4" autoplay muted loop></video>
+                <video src="DIOR Fashion Film 2020 _ Directed by VIVIENNE & TAMAS.mp4" autoplay muted loop></video>
                 <div class="overlay">
                     <div class="overlay-1">
                         <h1>Photography<br>and films</h1>
@@ -29,7 +29,7 @@
                     </div>
                     <div class="overlay-2">
                         <h4>Explore</h4>
-                        <img src="/project7/icons8-arrow-100.png" alt="">
+                        <img src="icons8-arrow-100.png" alt="">
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
             <h1>vogue/shot</h1>
             <div class="page-3part2">
                 <div class="page-3left">
-                    <img src="/project7/images-removebg-preview.png" alt="">
+                    <img src="images-removebg-preview.png" alt="">
                     <h2>Maison Artc:memories andd cuiture,<br>the base of futuristic fashion<br>awarenss.Tilila Oulhaj look</h2>
                 </div>
                 <div class="page-3right">
